# im

./: LICENSE-MIT  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
doc/: design.md  er.drawio  界面参数.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: im.db  im.db-shm  im.db-wal
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: message_commands.rs  mod.rs  p2p_commands.rs  user_commands.rs
src-tauri/src/dao/: conversation_dao.rs  user_dao.rs
src-tauri/src/p2p/: behaviour.rs  messaging.rs  mod.rs  peer.rs
src-tauri/src/services/: mod.rs  p2p_service.rs
src-tauri/src/types/: conversation.rs  conversation_member.rs  message.rs  user.rs
src/api/: p2p.ts
src/components/navbar/: index.vue
src/components/searchbar/: index.vue
src/components/sidebar/: index.vue
src/hooks/: useResizeListener.ts
src/layout/: index.vue
src/router/: index.ts
src/stores/: layout.ts
src/styles/: global.scss  splitpanes.scss
src/types/: p2p.ts
src/views/: Home.vue
src/views/message/: index.vue
src/views/message/chatroom/: index.vue
src/views/message/chatroom/input-area/: index.vue
src/views/message/chatroom/message-list/: index.vue
